[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/Bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Bullet/bullet.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bullet/charge_anim_orange.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Bullet/bullet_shoot.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 94, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 188, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 282, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 376, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 470, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 564, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 658, 0, 94, 94 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 752, 0, 94, 94 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "spawn",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.44312
height = 18.6443

[node name="Bullet" type="Area2D" groups=[
"enemy",
]]
z_index = 30
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "spawn"
frame = 8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.22344, 0 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
